[tool.poetry]
name = "zabbix-review-export-import"
version = "0.1.0"
description = "Zabbix Review and Export/Import"
authors = ["Alexandr Dzhurinskij <adzhurinskij@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyzabbix = "^1.3.1"
pyyaml = "^6.0.1"
anymarkup = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
